@@ -161,6 +161,8 @@ lighter making things easier to read.
 * (bug 8535) Allow certain vertical alignment attributes to be used as image
   keywords
 * (bug 6987) Allow perrow, widths, and heights attributes for <gallery>
+* (bug 8858) Safer handling when $wgImageLimits is changed. Added a note
+  in DefaultSettings to make it clear.
 
 
 == Languages updated ==
